EB-2001-12-19-0: Enhancem.: qmaster writes heartbeat-file during job deletion

CR-2001-12-19-1: Testsuite: new test: job_state_handling
                               - testing job states for array and "normal" jobs
                                 (hold, pending, running, finished, error, timehold
                                  jobhold, suspend is tested in qmod test)
                               - testing max_aj_instances
                               - testing max_aj_tasks
                            new parser procedure: parse_qstat_j() (parse qstat -j)
                            new procedure:  get_qstat_j_info() (get qstat -j information)
                            new procedure:  get_job_state() (parse qstat -f for job/array
                                                             states)
                 Bugfix:    unlock testsuite after fault tcl command code           
                               
CR-2001-12-19-0: Bugfix:    added missing ":" for qstat -j output for "job-array tasks"

AA-2001-12-19-0: Bugfix:    scrollbar anomalie in cluster config, made scrollbars static

JG-2001-12-19-1: Bugfix:    Limits were not correctly set on hp10 platform -
                            nonetheless most limits will have no effect due to
                            limitations of the hp10 platform.

JG-2001-12-19-0: Bugfix:    Limits did not work on glinux platform

JG-2001-12-18-1: Testsuite: - Fixed qsub check_submit - now it submits jobs from
                              any host to any host in the cluster as expected.
                            - extended tcl library function "submit_job" by 
                              parameters "host" on which to execute qsub 
                              and "user" as account that will execute qsub.

EB-2001-12-18-0: Bugfix:    'qstat -f' showed pending tasks multiple times 
                            Rescusciated '-g d' option of qstat
                 Issue:     None (Fix of Enhancem.: EB-2001-12-10-1)
